[package]
name = "libtiny_gui"
version = "0.1.5"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
description = "GUI implementation for tiny"
edition = "2018"

[dependencies]
futures = "0.3.1"
gdk = "0.12"
gio = "0.8"
glib = "0.9"
gtk = { version = "0.8.1", features = ["v3_22_30"] }
libtiny_client = { path = "../libtiny_client" }
libtiny_ui = { path = "../libtiny_ui" }
tokio = { version = "0.2.11", features = ["full"] }
